@@ -9,6 +9,10 @@ Version 1.3.19+svn:
 
   * Multiplayer
     * Revised maps: Cynsaun Battlefield.
+	* The random map generator now tries harder to get the wanted number
+      of players and shows no map if it fails.
+	* When generating a random map two teams could get the same starting  
+      position, this has been fixed.
 
   * Sound and music:
     * New music track, "Nunc Dimittis" by Jeremy Nicoll.
