@@ -355,7 +355,17 @@ std::string default_map_generator::generate_map(const std::vector<std::string>& 
 		DBG_NG << "calculated coastal params...\n";
 	}
 
-	return default_generate_map(width_,height_,island_size,island_off_center,iterations,hill_size_,max_lakes,(nvillages_*width_*height_)/1000,castle_size_,nplayers_,link_castles_,labels,cfg_);
+	// A map generator can fail so try a few times to get a map before aborting.
+	std::string map;
+	int tries = 10;
+	do {
+		map = default_generate_map(width_, height_, island_size, island_off_center,
+			iterations, hill_size_, max_lakes, (nvillages_ * width_ * height_) / 1000,
+			castle_size_, nplayers_, link_castles_, labels, cfg_);
+		--tries; 
+	} while (tries && map.empty());
+
+	return map;
 }
 
 config default_map_generator::create_scenario(const std::vector<std::string>& args)
